compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/withErrorTypes.fir.kt
interface T {
    val x: <!UNRESOLVED_REFERENCE!>ErrorType<!>
    fun getX(): <!UNRESOLVED_REFERENCE!>ErrorType1<!>
}